Fixes bug 73447.  When using a proxy, shift-reload does not force a refresh from the network.  patch=bbaetz@cs.mcgill.ca, r/sr=darin,dougt